Avance Archivo detail-track

--- a/detail-track.html
+++ b/detail-track.html
@@ -4,9 +4,69 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- cabecera -->
+    <header class="main-header">
+        <img class="logo" src="./img/spotify.jpg" alt="spotify_logo">
+
+        <nav class="main-nav">
+            <ul>
+                <li><a href="">Formulario</a></li>
+                <li><a href="">Gender</a></li>
+                <li><a href="">Page</a></li>
+                <li><a href="">Playlist</a></li>
+                <li><a href="">Search</a></li>
+            </ul>
+        </nav>
+    <container class="container-track">
+        <article class="article-track">
+            <div class="track-img"><img src="" alt="foto-tapadisco"></div>
+            <div class="track-data">
+                <h3>Nombre de la canción</h3>
+                <h4>Nombre del Artista</h4>
+                <h4>Nombre al Disco que pertenece</h4>
+            </div>
+            <iframe src="" frameborder="0"></iframe>
+        </article>
+        <article class="article-track">
+            <div class="track-img"><img src="" alt="foto-tapadisco"></div>
+            <div class="track-data">
+                <h3>Nombre de la canción</h3>
+                <h4>Nombre del Artista</h4>
+                <h4>Nombre al Disco que pertenece</h4>
+            </div>
+            <iframe src="" frameborder="0"></iframe>
+        </article>
+        <article class="article-track">
+            <div class="track-img"><img src="" alt="foto-tapadisco"></div>
+            <div class="track-data">
+                <h3>Nombre de la canción</h3>
+                <h4>Nombre del Artista</h4>
+                <h4>Nombre al Disco que pertenece</h4>
+            </div>
+            <iframe src="" frameborder="0"></iframe>
+        </article>
+        <article class="article-track" class="last-track">
+            <div class="track-img"><img src="" alt="foto-tapadisco"></div>
+            <div class="track-data">
+                <h3>Nombre de la canción</h3>
+                <h4>Nombre del Artista</h4>
+                <h4>Nombre al Disco que pertenece</h4>
+            </div>
+            <iframe src="" frameborder="0"></iframe>
+        </article>
+        <article class="article-track">
+            <div class="track-img"><img src="" alt="foto-tapadisco"></div>
+            <div class="track-data">
+                <h3>Nombre de la canción</h3>
+                <h4>Nombre del Artista</h4>
+                <h4>Nombre al Disco que pertenece</h4>
+            </div>
+            <iframe src="" frameborder="0"></iframe>
+        </article>
+    </container>
 </body>
 </html>
