cambios_index_html_css

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <!--canciones-->
     <section class="main-canciones">
-        <h2>Canciones</h2>
+        <h2 class="titulo-canciones">Canciones</h2>
         <article class="canciones">
             <div class="foto-canciones">
                 <img src="./img/img_canciones/Get_Lucky.jpg" alt="Get_Lucky">
@@ -82,6 +82,7 @@
 
 
     <section class="main-albums">
+        <h2 class="titulo-albums">Albumes</h2>
         <article class="albums">
             <div class="foto-albums">
             <img src="./img/img_albums/el_ultimo_tour.jpg" alt="el_ultimo_tour">
@@ -134,6 +135,7 @@
     <!-- artistas -->
     
     <section class="main-artistas">
+        <h2 class="titulo-artistas">Artistas</h2>
         <article class="artistas">
             <div class="foto-artistas">
             <img src="./img/img_artistas/david_guetta.jpg" alt="david_guetta">
