Avance página detaiil-track e inicialización footer

--- a/detail-artist.html
+++ b/detail-artist.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+
+     <!--footer-->
+     <footer>
+        <article>
+            <h4><strong>Contactanos</strong></h4>
+            <a href="osonciniviola@udesa.edu.ar">Email</a>
+            <a href="2964-445566">Teléfono</a>
+        </article>
+    </footer>
 </body>
 </html>
