--- a/detail-track.html
+++ b/detail-track.html
@@ -8,7 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- cabecera -->
+    
+    <!-- header -->
     <header class="main-header">
         <img class="logo" src="./img/spotify.jpg" alt="spotify_logo">
 
@@ -21,52 +22,63 @@
                 <li><a href="">Search</a></li>
             </ul>
         </nav>
+
+    <!--body-->
     <container class="container-track">
         <article class="article-track">
-            <div class="track-img"><img src="" alt="foto-tapadisco"></div>
+            <div class="track-img"><img src="./img/img_canciones/blinding_lights.jpg" alt="foto-tapadisco-blindingslights"></div>
             <div class="track-data">
-                <h3>Nombre de la canción</h3>
-                <h4>Nombre del Artista</h4>
-                <h4>Nombre al Disco que pertenece</h4>
+                <h3>Blinding Lights</h3>
+                <h4>The Weekend</h4>
+                <h4>Album: Blinding Lights</h4>
             </div>
             <iframe src="" frameborder="0"></iframe>
         </article>
         <article class="article-track">
-            <div class="track-img"><img src="" alt="foto-tapadisco"></div>
+            <div class="track-img"><img src="./img/img_canciones/peaches.jpg" alt="foto-tapadisco-peaches"></div>
             <div class="track-data">
-                <h3>Nombre de la canción</h3>
-                <h4>Nombre del Artista</h4>
-                <h4>Nombre al Disco que pertenece</h4>
+                <h3>Peaches</h3>
+                <h4>Justin Bieber</h4>
+                <h4>Justice</h4>
             </div>
             <iframe src="" frameborder="0"></iframe>
         </article>
         <article class="article-track">
-            <div class="track-img"><img src="" alt="foto-tapadisco"></div>
+            <div class="track-img"><img src="./img/img_canciones/Secrets.jpg" alt="foto-tapadisco-secrets"></div>
             <div class="track-data">
-                <h3>Nombre de la canción</h3>
-                <h4>Nombre del Artista</h4>
-                <h4>Nombre al Disco que pertenece</h4>
-            </div>
-            <iframe src="" frameborder="0"></iframe>
-        </article>
-        <article class="article-track" class="last-track">
-            <div class="track-img"><img src="" alt="foto-tapadisco"></div>
-            <div class="track-data">
-                <h3>Nombre de la canción</h3>
-                <h4>Nombre del Artista</h4>
-                <h4>Nombre al Disco que pertenece</h4>
+                <h3>Secrets</h3>
+                <h4>One Republic</h4>
+                <h4>Waking Up</h4>
             </div>
             <iframe src="" frameborder="0"></iframe>
         </article>
         <article class="article-track">
-            <div class="track-img"><img src="" alt="foto-tapadisco"></div>
+            <div class="track-img"><img src="./img/img_canciones/payphone.jpg" alt="foto-tapadisco-payphone"></div>
             <div class="track-data">
-                <h3>Nombre de la canción</h3>
-                <h4>Nombre del Artista</h4>
-                <h4>Nombre al Disco que pertenece</h4>
+                <h3>Payphone</h3>
+                <h4>Maroon 5</h4>
+                <h4>Overexposed Track By Track</h4>
+            </div>
+            <iframe src="" frameborder="0"></iframe>
+        </article>
+        <article class="article-track">
+            <div class="track-img"><img src="./img/img_canciones/get_lucky.jpg" alt="foto-tapadisco-getlucky"></div>
+            <div class="track-data">
+                <h3>Get Lucky</h3>
+                <h4>Daft Punk</h4>
+                <h4>Get Lucky</h4>
             </div>
             <iframe src="" frameborder="0"></iframe>
         </article>
     </container>
+
+    <!--footer-->
+    <footer>
+        <article>
+            <h4><strong>Contactanos</strong></h4>
+            <a href="osonciniviola@udesa.edu.ar">Email</a>
+            <a href="2964-445566">Teléfono</a>
+        </article>
+    </footer>
 </body>
 </html>
