--- a/genres.html
+++ b/genres.html
@@ -8,5 +8,13 @@
 </head>
 <body>
     
+    <!--footer-->
+    <footer>
+        <article>
+            <h4><strong>Contactanos</strong></h4>
+            <a href="osonciniviola@udesa.edu.ar">Email</a>
+            <a href="2964-445566">Teléfono</a>
+        </article>
+    </footer>   
 </body>
 </html>
