Vinculación de páginas con css e hipervinculos en el header

--- a/detail-album.html
+++ b/detail-album.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
+    <!-- header -->
+    <header class="main-header">
+        <nav class="main-nav">
+            <img class="logo" src="./img/logo.jpg.ejemplo.png" alt="spotify_logo">
+            <ul>
+                <li><a href="./index.html">Inicio</a></li>
+                <li><a href="./detail-artist.html">Artistas</a></li>
+                <li><a href="./detail-album.html"></a>Albums</li>
+                <li><a href="./detail-genres.html">Generos</a></li>
+                <li><a href="./playlist.html">Playlist</a></li>
+                <li><a href="./search-results.html">Search</a></li>
+            </ul>
+        </nav>
 
     <!--footer-->
     <footer>
