--- a/detail-track.html
+++ b/detail-track.html
@@ -11,15 +11,15 @@
     
     <!-- header -->
     <header class="main-header">
-        <img class="logo" src="./img/spotify.jpg" alt="spotify_logo">
-
         <nav class="main-nav">
+            <img class="logo" src="./img/logo.jpg.ejemplo.png" alt="spotify_logo">
             <ul>
-                <li><a href="">Formulario</a></li>
-                <li><a href="">Gender</a></li>
-                <li><a href="">Page</a></li>
-                <li><a href="">Playlist</a></li>
-                <li><a href="">Search</a></li>
+                <li><a href="./index.html">Inicio</a></li>
+                <li><a href="./detail-artist.html">Artistas</a></li>
+                <li><a href="./detail-album.html"></a>Albums</li>
+                <li><a href="./detail-genres.html">Generos</a></li>
+                <li><a href="./playlist.html">Playlist</a></li>
+                <li><a href="./search-results.html">Search</a></li>
             </ul>
         </nav>
 
