Edit header y creación del FORMULARIO

--- a/detail-track.html
+++ b/detail-track.html
@@ -13,6 +13,14 @@
     <header class="main-header">
         <nav class="main-nav">
             <img class="logo" src="./img/logo.jpg.ejemplo.png" alt="spotify_logo">
+            <form action="./search-results.html" class="formulario">
+                <div>
+                    <input type="text" name="search" value="" placeholder="canciones, artistas, albums...">
+                </div>
+                <div>
+                    <button type="submit">Buscar</button>
+                </div>
+            </form>
             <ul>
                 <li><a href="./index.html">Inicio</a></li>
                 <li><a href="./detail-artist.html">Artistas</a></li>
