--- a/playlist.html
+++ b/playlist.html
@@ -11,16 +11,27 @@
     <!-- header -->
     <header class="main-header">
         <nav class="main-nav">
-            <img class="logo" src="./img/logo.jpg.ejemplo.png" alt="spotify_logo">
+            <div class="cajalogo">
+                <img class="logo" src="./img/logo.jpg.ejemplo.png" alt="spotify_logo">
+            </div>
+            <form action="./search-results.html" class="formulario">
+                <div>
+                    <input type="text" name="search" value="" placeholder="canciones, artistas, albums...">
+                </div>
+                <div>
+                    <button type="submit">Buscar</button>
+                </div>
+            </form>
             <ul>
                 <li><a href="./index.html">Inicio</a></li>
-                <li><a href="./detail-artist.html">Artistas</a></li>
-                <li><a href="./detail-album.html"></a>Albums</li>
-                <li><a href="./detail-genres.html">Generos</a></li>
+                <li><a href="./detail-track.html">Canciones</a</li>
+                    <li><a href="./detail-album.html">Albums</a></li>
+                    <li><a href="./detail-artist.html">Artistas</a></li>
+                <li><a href="./detail-genres.html">Géneros</a></li>
                 <li><a href="./playlist.html">Playlist</a></li>
-                <li><a href="./search-results.html">Search</a></li>
             </ul>
         </nav>
+    </header>
 
     <!--footer-->
     <footer>
