--- a/search-results.html
+++ b/search-results.html
@@ -8,21 +8,21 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- header -->
+    <!-- header --
     <header class="main-header">
         <nav class="main-nav">
             <img class="logo" src="./img/logo.jpg.ejemplo.png" alt="spotify_logo">
             <ul>
                 <li><a href="./index.html">Inicio</a></li>
-                <li><a href="./detail-artist.html">Artistas</a></li>
-                <li><a href="./detail-album.html"></a>Albums</li>
-                <li><a href="./detail-genres.html">Generos</a></li>
+                <li><a href="./detail-track.html">Canciones</a</li>
+                    <li><a href="./detail-album.html">Albums</a></li>
+                    <li><a href="./detail-artist.html">Artistas</a></li>
+                <li><a href="./detail-genres.html">Géneros</a></li>
                 <li><a href="./playlist.html">Playlist</a></li>
-                <li><a href="./search-results.html">Search</a></li>
             </ul>
         </nav>
 
-    <!--footer-->
+    <!-footer--
     <footer>
         <article>
             <h4><strong>Contactanos</strong></h4>
