--- a/detail-artist.html
+++ b/detail-artist.html
@@ -8,31 +8,32 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- header -->
-    <header class="main-header">
-        <nav class="main-nav">
+
+        <!-- header -->
+        <header>
             <div class="cajalogo">
-                <img class="logo" src="./img/logo.jpg.ejemplo.png" alt="spotify_logo">
+                <img class="logo" src="./img/logo.jpg.ejemplo.png" alt="logo">
             </div>
-            <form action="./search-results.html" class="formulario">
-                <div>
+            <form action="./search-results.html">
+                <div class="barrabusqueda">
                     <input type="text" name="search" value="" placeholder="canciones, artistas, albums...">
                 </div>
-                <div>
+                <div class="divbutton">
                     <button type="submit">Buscar</button>
                 </div>
             </form>
-            <ul>
-                <li><a href="./index.html">Inicio</a></li>
-                <li><a href="./detail-track.html">Canciones</a></li>
-                <li><a href="./detail-album.html">Albums</a></li>
-                <li><a href="./detail-artist.html">Artistas</a></li>
-                <li><a href="./detail-genres.html">Géneros</a></li>
-                <li><a href="./playlist.html">Playlist</a></li>
-            </ul>
-        </nav>
-    </header>
-
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="./index.html">Inicio</a></li>
+                    <li><a href="./detail-track.html">Canciones</a></li>
+                    <li><a href="./detail-album.html">Albums</a></li>
+                    <li><a href="./detail-artist.html">Artistas</a></li>
+                    <li><a href="./detail-genres.html">Géneros</a></li>
+                    <li><a href="./playlist.html">Playlist</a></li>
+                </ul>
+            </nav>
+        </header>
+    
      <!--footer-->
      <footer>
         <article>
