--- a/detail-album.html
+++ b/detail-album.html
@@ -32,6 +32,60 @@
             </ul>
         </nav>
     </header>
+     <!--body-->
+     <container class="container-track">
+        <article class="article-track">
+            <div><img src="./img/img_canciones/blinding_lights.jpg" alt="foto-tapadisco-blindingslights"></div>
+            <div class="track-data">
+                <h3>Album: Blinding Lights</h3>
+                <h4>Artista: The Weekend</h4>
+                <h4>Genero: Electro-Pop</h4>
+                <h4>Publicado en: 29 Nov 2019</h4>
+            </div>
+            <iframe src="" frameborder="0"></iframe>
+        </article>
+        <article class="article-track">
+            <div class="track-img"><img src="./img/img_canciones/peaches.jpg" alt="foto-tapadisco-peaches"></div>
+            <div class="track-data">
+                <h3>Album: Justice</h3>
+                <h4>Artista: Justin Bieber</h4>
+                <h4>Genero: Pop</h4>
+                <h4>Publicado en: 19 Mar 2021</h4>
+                <h4></h4>
+            </div>
+            <iframe src="" frameborder="0"></iframe>
+        </article>
+        <article class="article-track">
+            <div class="track-img"><img src="./img/img_canciones/Secrets.jpg" alt="foto-tapadisco-secrets"></div>
+            <div class="track-data">
+                <h3>Album: Waking up</h3>
+                <h4>Artista: One Republic</h4>
+                <h4>Genero: Pop-rock</h4>
+                <h4>Publicado en: 17 Nov 2009</h4>
+            </div>
+            <iframe src="" frameborder="0"></iframe>
+        </article>
+        <article class="article-track">
+            <div class="track-img"><img src="./img/img_canciones/payphone.jpg" alt="foto-tapadisco-payphone"></div>
+            <div class="track-data">
+                <h3>Album: Overexposed Track By Track</h3>
+                <h4>Artista:Maroon 5</h4>
+                <h4>Genero: Pop</h4>
+                <h4>Publicado en: 1 Ene 2012</h4>
+            </div>
+            <iframe src="" frameborder="0"></iframe>
+        </article>
+        <article class="article-track">
+            <div class="track-img"><img src="./img/img_canciones/get_lucky.jpg" alt="foto-tapadisco-getlucky"></div>
+            <div class="track-data">
+                <h3>Album: Get Lucky</h3>
+                <h4>Artista:Daft Punk</h4>
+                <h4>Genero: Funk</h4>
+                <h4>Published in:14 Sep 2009 </h4>
+            </div>
+            <iframe src="" frameborder="0"></iframe>
+        </article>
+    </container>
 
     <!--footer-->
     <footer>
