--- a/detail-track.html
+++ b/detail-track.html
@@ -42,8 +42,9 @@
                 <h3>Blinding Lights</h3>
                 <h4>The Weekend</h4>
                 <h4>Album: Blinding Lights</h4>
+                <iframe width="250" height="150" src="https://www.youtube.com/embed/4NRXx6U8ABQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <a href="">Agregar a Playlist</a>
             </div>
-            <iframe src="" frameborder="0"></iframe>
         </article>
         <article class="article-track">
             <div class="track-img"><img src="./img/img_canciones/peaches.jpg" alt="foto-tapadisco-peaches"></div>
@@ -53,6 +54,7 @@
                 <h4>Justice</h4>
             </div>
             <iframe src="" frameborder="0"></iframe>
+            <a href="">Agregar a Playlist</a>
         </article>
         <article class="article-track">
             <div class="track-img"><img src="./img/img_canciones/Secrets.jpg" alt="foto-tapadisco-secrets"></div>
@@ -62,6 +64,7 @@
                 <h4>Waking Up</h4>
             </div>
             <iframe src="" frameborder="0"></iframe>
+            <a href="">Agregar a Playlist</a>
         </article>
         <article class="article-track">
             <div class="track-img"><img src="./img/img_canciones/payphone.jpg" alt="foto-tapadisco-payphone"></div>
@@ -71,6 +74,7 @@
                 <h4>Overexposed Track By Track</h4>
             </div>
             <iframe src="" frameborder="0"></iframe>
+            <a href="">Agregar a Playlist</a>
         </article>
         <article class="article-track">
             <div class="track-img"><img src="./img/img_canciones/get_lucky.jpg" alt="foto-tapadisco-getlucky"></div>
@@ -80,6 +84,7 @@
                 <h4>Get Lucky</h4>
             </div>
             <iframe src="" frameborder="0"></iframe>
+            <a href="">Agregar a Playlist</a>
         </article>
     </container>
 
@@ -89,6 +94,11 @@
             <h4><strong>Contactanos</strong></h4>
             <a href="osonciniviola@udesa.edu.ar">Email</a>
             <a href="2964-445566">Teléfono</a>
+        </article>
+        <article>
+            <h3>Julian Araujo</h3>
+            <h3>Soncini Octavio</h3>
+            <h3>Tufró Nicolas</h3>
         </article>
     </footer>
 </body>
