Detail-tracks y footer

--- a/detail-track.html
+++ b/detail-track.html
@@ -41,9 +41,9 @@
             <div class="track-data">
                 <h3>Blinding Lights</h3>
                 <h4>The Weekend</h4>
-                <h4>Album: Blinding Lights</h4>
+                <h4>Album: After Hours</h4>
                 <iframe width="250" height="150" src="https://www.youtube.com/embed/4NRXx6U8ABQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <a href="">Agregar a Playlist</a>
+                <a href="" class="agregarplaylist"><strong>Agregar a Playlist</strong></a>
             </div>
         </article>
         <article class="article-track">
@@ -52,9 +52,9 @@
                 <h3>Peaches</h3>
                 <h4>Justin Bieber</h4>
                 <h4>Justice</h4>
+                <iframe width="250" height="150" src="https://www.youtube.com/embed/tQ0yjYUFKAE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <a href="" class="agregarplaylist"><strong>Agregar a Playlist</strong></a>
             </div>
-            <iframe src="" frameborder="0"></iframe>
-            <a href="">Agregar a Playlist</a>
         </article>
         <article class="article-track">
             <div class="track-img"><img src="./img/img_canciones/Secrets.jpg" alt="foto-tapadisco-secrets"></div>
@@ -62,9 +62,9 @@
                 <h3>Secrets</h3>
                 <h4>One Republic</h4>
                 <h4>Waking Up</h4>
+                <iframe width="250" height="150" src="https://www.youtube.com/embed/qHm9MG9xw1o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <a href="" class="agregarplaylist"><strong>Agregar a Playlist</strong></a>
             </div>
-            <iframe src="" frameborder="0"></iframe>
-            <a href="">Agregar a Playlist</a>
         </article>
         <article class="article-track">
             <div class="track-img"><img src="./img/img_canciones/payphone.jpg" alt="foto-tapadisco-payphone"></div>
@@ -72,9 +72,9 @@
                 <h3>Payphone</h3>
                 <h4>Maroon 5</h4>
                 <h4>Overexposed Track By Track</h4>
+                <iframe width="250" height="150" src="https://www.youtube.com/embed/KRaWnd3LJfs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <a href="" class="agregarplaylist"><strong>Agregar a Playlist</strong></a>
             </div>
-            <iframe src="" frameborder="0"></iframe>
-            <a href="">Agregar a Playlist</a>
         </article>
         <article class="article-track">
             <div class="track-img"><img src="./img/img_canciones/get_lucky.jpg" alt="foto-tapadisco-getlucky"></div>
@@ -82,20 +82,21 @@
                 <h3>Get Lucky</h3>
                 <h4>Daft Punk</h4>
                 <h4>Get Lucky</h4>
+                <iframe width="250" height="150" src="https://www.youtube.com/embed/5NV6Rdv1a3I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <a href="" class="agregarplaylist"><strong>Agregar a Playlist</strong></a>
             </div>
-            <iframe src="" frameborder="0"></iframe>
-            <a href="">Agregar a Playlist</a>
         </article>
     </container>
 
     <!--footer-->
     <footer>
-        <article>
+        <article class="contact">
             <h4><strong>Contactanos</strong></h4>
             <a href="osonciniviola@udesa.edu.ar">Email</a>
             <a href="2964-445566">Teléfono</a>
         </article>
-        <article>
+        <article class="owners">
+            <h4>Owners</h4>
             <h3>Julian Araujo</h3>
             <h3>Soncini Octavio</h3>
             <h3>Tufró Nicolas</h3>
