detail-album parte 2

--- a/detail-album.html
+++ b/detail-album.html
@@ -37,10 +37,27 @@
         <article class="article-track">
             <div><img src="./img/img_canciones/blinding_lights.jpg" alt="foto-tapadisco-blindingslights"></div>
             <div class="track-data">
-                <h3>Album: Blinding Lights</h3>
+                <h3>Album: After Hours</h3>
                 <h4>Artista: The Weekend</h4>
                 <h4>Genero: Electro-Pop</h4>
                 <h4>Publicado en: 29 Nov 2019</h4>
+                <h4>Canciones del album:</h4>
+                <ul>
+                    <li>Alone Again</li>
+                    <li>Too Late</li>
+                    <li>Hardest To Love</li>
+                    <li>Scared To Live</li>
+                    <li>Snowchild</li>
+                    <li>Escape From LA</li>
+                    <li>Heartless</li>
+                    <li>Faith</li>
+                    <li>Blinding Lights</li>
+                    <li>In Your Eyes</li>
+                    <li>Save Your Tears</li>
+                    <li>Repeat After Me</li>
+                    <li>After Hours</li>
+                    <li>Until I Bleed Out</li>
+                </ul>
             </div>
             <iframe src="" frameborder="0"></iframe>
         </article>
@@ -51,7 +68,25 @@
                 <h4>Artista: Justin Bieber</h4>
                 <h4>Genero: Pop</h4>
                 <h4>Publicado en: 19 Mar 2021</h4>
-                <h4></h4>
+                <h4>Canciones del album:</h4>
+                <ul>
+                    <li>2 Much</li>
+                    <li>Deserve You</li>
+                    <li>As I Am</li>
+                    <li>Off My Face</li>
+                    <li>Holy</li>
+                    <li>Unstable</li>
+                    <li>MLK Interlude</li>
+                    <li>Die For You</li>
+                    <li>Hold On</li>
+                    <li>Somebody</li>
+                    <li>Ghost</li>
+                    <li>Peaches</li>
+                    <li>Love You Different</li>
+                    <li>Loved by You</li>
+                    <li>Anyone</li>
+                    <li>Lonely</li>
+                </ul>
             </div>
             <iframe src="" frameborder="0"></iframe>
         </article>
@@ -62,16 +97,45 @@
                 <h4>Artista: One Republic</h4>
                 <h4>Genero: Pop-rock</h4>
                 <h4>Publicado en: 17 Nov 2009</h4>
+                <h4>Canciones del album:</h4>
+                <ul>
+                    <li>Made for You</li>
+                    <li>All the Right Moves</li>
+                    <li>Secrets</li>
+                    <li>Everybody Loves Me</li>
+                    <li>Missing Persons 1 & 2</li>
+                    <li>Good Life</li>
+                    <li>All This Time</li>
+                    <li>Fear</li>
+                    <li>Waking Up</li>
+                    <li>Marchin On</li>
+                    <li>Lullaby</li>
+                </ul>
             </div>
             <iframe src="" frameborder="0"></iframe>
         </article>
         <article class="article-track">
             <div class="track-img"><img src="./img/img_canciones/payphone.jpg" alt="foto-tapadisco-payphone"></div>
             <div class="track-data">
-                <h3>Album: Overexposed Track By Track</h3>
+                <h3>Album: Overexposed</h3>
                 <h4>Artista:Maroon 5</h4>
                 <h4>Genero: Pop</h4>
                 <h4>Publicado en: 1 Ene 2012</h4>
+                <h4>Canciones del album:</h4>
+                <ul>
+                    <li>One More Night</li>
+                    <li>Payphone</li>
+                    <li>Daylight</li>
+                    <li>Lucky Strike</li>
+                    <li>The Man Who Never Lied</li>
+                    <li>Love Somebody</li>
+                    <li>Ladykiller</li>
+                    <li>Fortune Teller</li>
+                    <li>Sad</li>
+                    <li>Tickets</li>
+                    <li>Doin´ Dirt</li>
+                    <li>Beutiful Goodbye</li>
+                </ul>
             </div>
             <iframe src="" frameborder="0"></iframe>
         </article>
@@ -82,6 +146,20 @@
                 <h4>Artista:Daft Punk</h4>
                 <h4>Genero: Funk</h4>
                 <h4>Published in:14 Sep 2009 </h4>
+                <h4>Canciones del album:</h4>
+                <ul>
+                    <li>Border Reiver</li>
+                    <li>Hard Shoulder</li>
+                    <li>You Can´t Beat the House</li>
+                    <li>Before Gas and TV</li>
+                    <li>Monteleone</li>
+                    <li>Cleaning My Gun</li>
+                    <li>The Car Was the One</li>
+                    <li>Remembrance Day</li>
+                    <li>Get lucky</li>
+                    <li>So Far from the Clyde</li>
+                    <li>Piper to the end</li>
+                </ul>
             </div>
             <iframe src="" frameborder="0"></iframe>
         </article>
