--- a/detail-track.html
+++ b/detail-track.html
@@ -4,34 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">   
+    <title>Detalle</title>
 </head>
 <body>
     
     <!-- header -->
     <header>
-        <div class="cajalogo">
+        <div>
             <img class="logo" src="./img/logo.jpg.ejemplo.png" alt="logo">
         </div>
-        <form action="./search-results.html">
-            <div class="barrabusqueda">
-                <input type="text" name="search" value="" placeholder="canciones, artistas, albums...">
-            </div>
-            <div class="divbutton">
-                <button type="submit">Buscar</button>
-            </div>
-        </form>
-        <nav class="main-nav">
-            <ul>
-                <li><a href="./index.html">Inicio</a></li>
-                <li><a href="./detail-track.html">Canciones</a></li>
-                <li><a href="./detail-album.html">Albums</a></li>
-                <li><a href="./detail-artist.html">Artistas</a></li>
-                <li><a href="./detail-genres.html">Géneros</a></li>
-                <li><a href="./playlist.html">Playlist</a></li>
-            </ul>
-        </nav>
+        <div id="centroheader">
+            <form action="./search-results.html" class="barrabusqueda">
+                    <input type="text" name="search" value="" placeholder="canciones, artistas, albums...">
+                    <button type="submit">Buscar</button>
+            </form>
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="./index.html">Inicio</a></li>
+                    <li><a href="./detail-track.html">Canciones</a></li>
+                    <li><a href="./detail-album.html">Albums</a></li>
+                    <li><a href="./detail-artist.html">Artistas</a></li>
+                    <li><a href="./detail-genres.html">Géneros</a></li>
+                    <li><a href="./playlist.html">Playlist</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <!--body-->
