--- a/detail-artist.html
+++ b/detail-artist.html
@@ -9,36 +9,33 @@
     <title>Document</title>
 </head>
 <body>
-
-        <!-- header -->
-        <header>
-            <div class="cajalogo">
-                <img class="logo" src="./img/logo.jpg.ejemplo.png" alt="logo">
-            </div>
-            <form action="./search-results.html">
-                <div class="barrabusqueda">
-                    <input type="text" name="search" value="" placeholder="canciones, artistas, albums...">
-                </div>
-                <div class="divbutton">
+    <!-- header -->
+    <header>
+        <div>
+            <img class="logo" src="./img/logo.jpg.ejemplo.png" alt="logo">
+        </div>
+        <div id="centroheader">
+        <nav class="main-nav">
+            <ul>
+                <li><a href="./index.html">Inicio</a></li>
+                <li><a href="./detail-track.html">Canciones</a></li>
+                <li><a href="./detail-album.html">Albums</a></li>
+                <li><a href="./detail-artist.html">Artistas</a></li>
+                <li><a href="./detail-genres.html">Géneros</a></li>
+                <li><a href="./playlist.html">Playlist</a></li>
+            </ul>
+        </nav>
+            <form action="./search-results.html" class="barrabusqueda">
+                    <input type="text" name="search" value="" placeholder="Canciones, artistas, albums...">
                     <button type="submit">Buscar</button>
-                </div>
             </form>
-            <nav class="main-nav">
-                <ul>
-                    <li><a href="./index.html">Inicio</a></li>
-                    <li><a href="./detail-track.html">Canciones</a></li>
-                    <li><a href="./detail-album.html">Albums</a></li>
-                    <li><a href="./detail-artist.html">Artistas</a></li>
-                    <li><a href="./detail-genres.html">Géneros</a></li>
-                    <li><a href="./playlist.html">Playlist</a></li>
-                </ul>
-            </nav>
-        </header>
-    
+        </div>
+    </header>
+
      <!--footer-->
      <footer>
         <article>
-            <h4><strong>Contactanos</strong></h4>
+            <h4>Contactanos</h4>
             <a href="osonciniviola@udesa.edu.ar">Email</a>
             <a href="2964-445566">Teléfono</a>
         </article>
