--- a/detail-track.html
+++ b/detail-track.html
@@ -9,28 +9,27 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">   
     <title>Detalle</title>
 </head>
-<body>
-    
+<body>   
     <!-- header -->
     <header>
         <div>
             <img class="logo" src="./img/logo.jpg.ejemplo.png" alt="logo">
         </div>
         <div id="centroheader">
+        <nav class="main-nav">
+            <ul>
+                <li><a href="./index.html">Inicio</a></li>
+                <li><a href="./detail-track.html">Canciones</a></li>
+                <li><a href="./detail-album.html">Albums</a></li>
+                <li><a href="./detail-artist.html">Artistas</a></li>
+                <li><a href="./detail-genres.html">Géneros</a></li>
+                <li><a href="./playlist.html">Playlist</a></li>
+            </ul>
+        </nav>
             <form action="./search-results.html" class="barrabusqueda">
-                    <input type="text" name="search" value="" placeholder="canciones, artistas, albums...">
+                    <input type="text" name="search" value="" placeholder="Canciones, artistas, albums...">
                     <button type="submit">Buscar</button>
             </form>
-            <nav class="main-nav">
-                <ul>
-                    <li><a href="./index.html">Inicio</a></li>
-                    <li><a href="./detail-track.html">Canciones</a></li>
-                    <li><a href="./detail-album.html">Albums</a></li>
-                    <li><a href="./detail-artist.html">Artistas</a></li>
-                    <li><a href="./detail-genres.html">Géneros</a></li>
-                    <li><a href="./playlist.html">Playlist</a></li>
-                </ul>
-            </nav>
         </div>
     </header>
 
