--- a/index.html
+++ b/index.html
@@ -12,32 +12,29 @@
 
 
 <body>
-
-        <!-- header -->
-        <header>
-            <div class="cajalogo">
-                <img class="logo" src="./img/logo.jpg.ejemplo.png" alt="logo">
-            </div>
-            <form action="./search-results.html">
-                <div class="barrabusqueda">
-                    <input type="text" name="search" value="" placeholder="canciones, artistas, albums...">
-                </div>
-                <div class="divbutton">
+    <!-- header -->
+    <header>
+        <div>
+            <img class="logo" src="./img/logo.jpg.ejemplo.png" alt="logo">
+        </div>
+        <div id="centroheader">
+        <nav class="main-nav">
+            <ul>
+                <li><a href="./index.html">Inicio</a></li>
+                <li><a href="./detail-track.html">Canciones</a></li>
+                <li><a href="./detail-album.html">Albums</a></li>
+                <li><a href="./detail-artist.html">Artistas</a></li>
+                <li><a href="./detail-genres.html">Géneros</a></li>
+                <li><a href="./playlist.html">Playlist</a></li>
+            </ul>
+        </nav>
+            <form action="./search-results.html" class="barrabusqueda">
+                    <input type="text" name="search" value="" placeholder="Canciones, artistas, albums...">
                     <button type="submit">Buscar</button>
-                </div>
             </form>
-            <nav class="main-nav">
-                <ul>
-                    <li><a href="./index.html">Inicio</a></li>
-                    <li><a href="./detail-track.html">Canciones</a></li>
-                    <li><a href="./detail-album.html">Albums</a></li>
-                    <li><a href="./detail-artist.html">Artistas</a></li>
-                    <li><a href="./detail-genres.html">Géneros</a></li>
-                    <li><a href="./playlist.html">Playlist</a></li>
-                </ul>
-            </nav>
-        </header>
-    
+        </div>
+    </header>
+
     <!--canciones-->
     <span><h2 class="titulo-canciones">Canciones</h2></span>
     <section class="main-canciones">
