--- a/search-results.html
+++ b/search-results.html
@@ -11,17 +11,10 @@
 <body>
     <!-- header --
     <header>
-        <div class="cajalogo">
+        <div>
             <img class="logo" src="./img/logo.jpg.ejemplo.png" alt="logo">
         </div>
-        <form action="./search-results.html">
-            <div class="barrabusqueda">
-                <input type="text" name="search" value="" placeholder="canciones, artistas, albums...">
-            </div>
-            <div class="divbutton">
-                <button type="submit">Buscar</button>
-            </div>
-        </form>
+        <div id="centroheader">
         <nav class="main-nav">
             <ul>
                 <li><a href="./index.html">Inicio</a></li>
@@ -32,6 +25,7 @@
                 <li><a href="./playlist.html">Playlist</a></li>
             </ul>
         </nav>
+        </div>
     </header>
 
     <!-footer--
