--- a/detail-album.html
+++ b/detail-album.html
@@ -33,8 +33,8 @@
     </header>
 
      <!--body-->
-     <container class="container-track">
-        <article class="article-track">
+     <container class="container-album">
+        <article class="article-album">
             <div><img src="./img/img_canciones/blinding_lights.jpg" alt="foto-tapadisco-blindingslights"></div>
             <div class="track-data">
                 <h3>Album: After Hours</h3>
@@ -61,7 +61,7 @@
             </div>
             <iframe src="" frameborder="0"></iframe>
         </article>
-        <article class="article-track">
+        <article class="article-album">
             <div class="track-img"><img src="./img/img_canciones/peaches.jpg" alt="foto-tapadisco-peaches"></div>
             <div class="track-data">
                 <h3>Album: Justice</h3>
@@ -90,7 +90,7 @@
             </div>
             <iframe src="" frameborder="0"></iframe>
         </article>
-        <article class="article-track">
+        <article class="article-album">
             <div class="track-img"><img src="./img/img_canciones/Secrets.jpg" alt="foto-tapadisco-secrets"></div>
             <div class="track-data">
                 <h3>Album: Waking up</h3>
@@ -114,7 +114,7 @@
             </div>
             <iframe src="" frameborder="0"></iframe>
         </article>
-        <article class="article-track">
+        <article class="article-album">
             <div class="track-img"><img src="./img/img_canciones/payphone.jpg" alt="foto-tapadisco-payphone"></div>
             <div class="track-data">
                 <h3>Album: Overexposed</h3>
@@ -139,7 +139,7 @@
             </div>
             <iframe src="" frameborder="0"></iframe>
         </article>
-        <article class="article-track">
+        <article class="article-album">
             <div class="track-img"><img src="./img/img_canciones/get_lucky.jpg" alt="foto-tapadisco-getlucky"></div>
             <div class="track-data">
                 <h3>Album: Get Lucky</h3>
