--- a/detail-track.html
+++ b/detail-track.html
@@ -19,9 +19,6 @@
         <nav class="main-nav">
             <ul>
                 <li><a href="./index.html">Inicio</a></li>
-                <li><a href="./detail-track.html">Canciones</a></li>
-                <li><a href="./detail-album.html">Albums</a></li>
-                <li><a href="./detail-artist.html">Artistas</a></li>
                 <li><a href="./detail-genres.html">Géneros</a></li>
                 <li><a href="./playlist.html">Playlist</a></li>
             </ul>
@@ -41,6 +38,7 @@
                 <h3>Blinding Lights</h3>
                 <h4>The Weekend</h4>
                 <h4>Album: After Hours</h4>
+                <audio src=""></audio>
                 <iframe width="250" height="150" src="https://www.youtube.com/embed/4NRXx6U8ABQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <a href="" class="agregarplaylist"><strong>Agregar a Playlist</strong></a>
             </div>
