--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./css/style.css">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@500&family=Zen+Dots&display=swap" rel="stylesheet">
+
     <title>Spotify</title>
 </head>
 
@@ -36,7 +40,7 @@
     </header>
 
     <!--canciones-->
-    <span><h2 class="titulo-canciones">Canciones</h2></span>
+    <span><h2 class="titulos-index">Canciones</h2></span>
     <section class="main-canciones">
         
         <article class="canciones">
@@ -91,7 +95,7 @@
     </section>
 
 
-    <span><h2 class="titulo-albums">Albumes</h2></span>
+    <span><h2 class="titulos-index">Albumes</h2></span>
     <section class="main-albums">
         <article class="albums">
             <div class="img-container">
@@ -144,7 +148,7 @@
 
     <!-- artistas -->
     
-    <span><h2 class="titulo-artistas">Artistas</h2></span>
+    <span><h2 class="titulos-index">Artistas</h2></span>
     <section class="main-artistas">
         <article class="artistas">
             <div class="img-container">
