--- a/search-results.html
+++ b/search-results.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- header --
+    <!-- header -->
     <header>
         <div>
             <img class="logo" src="./img/logo.jpg.ejemplo.png" alt="logo">
